chore: update html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <h1>Zaid Agha Leaves Amman</h1>
         <br>
         <dev class="center">
-            <img src="image (3).png" alt="Zaid Agha" width="300" height="300">
-            <img src="images.jpeg" alt="South Africa" width="300" height="300">
+            <img src="image2.png" alt="Zaid Agha" width="300" height="300">
+            <img src="image1.png" alt="South Africa" width="300" height="300">
         </dev>
         <h3>
             DBA tried to solve a dead lock problem with no luck so he decide to leave Jordan and move to south Africa
